noch ohne tisch

--- a/Adafruit_v2.vcxproj.filters
+++ b/Adafruit_v2.vcxproj.filters
@@ -27,12 +27,21 @@
     <ClInclude Include="Move.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Adafruit_v2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Tisch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Distance.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Move.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Tisch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
