--- a/Adafruit_v2.vcxproj
+++ b/Adafruit_v2.vcxproj
@@ -47,10 +47,10 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\juerg.maier\Documents\Arduino\libraries\utility;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\libraries\Wire\src;C:\Users\juerg.maier\Documents\Arduino\libraries\Adafruit_Motor_Shield_V2_Library;C:\Program Files (x86)\Arduino\libraries\Servo\src;C:\Users\juerg.maier\Documents\Arduino\libraries\Adafruit_Motor_Shield_V2_Library\utility;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\libraries\Wire\src\utility;C:\Program Files (x86)\Arduino\libraries;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\libraries;C:\Users\juerg.maier\Documents\Arduino\libraries;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\cores\arduino;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\variants\mega;$(ProjectDir)..\Adafruit_v2;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.3-arduino2\avr\include\;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.3-arduino2\avr\include\avr\;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.3-arduino2\lib\gcc\avr\4.9.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>D:\Projekte\InMoov\MotorizedBase\Adafruit_v2\__vm\.Adafruit_v2.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <AdditionalIncludeDirectories>C:\Users\juerg.maier\Documents\Arduino\libraries\Adafruit_Motor_Shield_V2_Library;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\libraries\Wire\src;C:\Program Files (x86)\Arduino\libraries\Servo\src;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\libraries\Wire\src\utility;C:\Program Files (x86)\Arduino\libraries;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\libraries;C:\Users\juerg.maier\Documents\Arduino\libraries;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\cores\arduino;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\hardware\avr\1.6.17\variants\mega;$(ProjectDir)..\Adafruit_v2;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.3-arduino2\avr\include\;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.3-arduino2\avr\include\avr\;C:\Users\juerg.maier\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\4.9.2-atmel3.5.3-arduino2\lib\gcc\avr\4.9.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>$(ProjectDir)__vm\.Adafruit_v2.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
-      <PreprocessorDefinitions>__AVR_ATmega2560__;F_CPU=16000000L;ARDUINO=106011;ARDUINO_AVR_MEGA2560;ARDUINO_ARCH_AVR;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__AVR_ATmega2560__;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=106011;ARDUINO_AVR_MEGA2560;ARDUINO_ARCH_AVR;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -80,12 +80,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Distance.h" />
+    <ClInclude Include="Adafruit_v2.h" />
     <ClInclude Include="Move.h" />
+    <ClInclude Include="Tisch.h" />
     <ClInclude Include="__vm\.Adafruit_v2.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Distance.cpp" />
     <ClCompile Include="Move.cpp" />
+    <ClCompile Include="Tisch.cpp" />
   </ItemGroup>
   <PropertyGroup>
     <DebuggerFlavor>VisualMicroDebugger</DebuggerFlavor>
